--- a/campData_project/config/database.yml
+++ b/campData_project/config/database.yml
@@ -19,7 +19,7 @@ default: &default
 
 development:
   <<: *default
-  database: campData_project_development
+  database: Camp_Data_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
